javascript: Break long lines and cleanup whitespace

--- a/software/examples/javascript/ExampleThreshold.html
+++ b/software/examples/javascript/ExampleThreshold.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<head>
-		<title>Tinkerforge | JavaScript Example</title>
-	</head>
-	<body>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <head>
+        <title>Tinkerforge | JavaScript Example</title>
+    </head>
+    <body>
         <div style="text-align:center;">
-		    <h1>Distance US Bricklet Threshold Example</h1>
-		    <p>
-			    <input value="localhost" id="host" type="text" size="20">:
-			    <input value="4280" id="port" type="text" size="5">,
-			    <input value="uid" id="uid" type="text" size="5">
-			    <input value="Start Example" id="start" type="button" onclick="startExample();">
-		    </p>
-		    <p>
-			    <textarea id="text" cols="80" rows="24" style="resize:none;">Press "Start Example" to begin ...</textarea>
-		    </p>
+            <h1>Distance US Bricklet Threshold Example</h1>
+            <p>
+                <input value="localhost" id="host" type="text" size="20">:
+                <input value="4280" id="port" type="text" size="5">,
+                <input value="uid" id="uid" type="text" size="5">
+                <input value="Start Example" id="start" type="button" onclick="startExample();">
+            </p>
+            <p>
+                <textarea id="text" cols="80" rows="24" style="resize:none;"
+                          >Press "Start Example" to begin ...</textarea>
+            </p>
         <div>
-		<script src="./Tinkerforge.js" type='text/javascript'></script>
-		<script type='text/javascript'>
+        <script src="./Tinkerforge.js" type='text/javascript'></script>
+        <script type='text/javascript'>
             var ipcon;
             var textArea = document.getElementById("text");
-			function startExample() {
+            function startExample() {
                 textArea.value = "";
-				var HOST = document.getElementById("host").value;
-				var PORT = parseInt(document.getElementById("port").value);
-				var UID	= document.getElementById("uid").value;
+                var HOST = document.getElementById("host").value;
+                var PORT = parseInt(document.getElementById("port").value);
+                var UID = document.getElementById("uid").value;
                 if(ipcon !== undefined) {
                     ipcon.disconnect();
                 }
-                ipcon = new Tinkerforge.IPConnection();// Create IP connection
-                var dist = new Tinkerforge.BrickletDistanceUS(UID, ipcon);// Create device object
+                ipcon = new Tinkerforge.IPConnection(); // Create IP connection
+                var dist = new Tinkerforge.BrickletDistanceUS(UID, ipcon); // Create device object
                 ipcon.connect(HOST, PORT,
                     function(error) {
-                        textArea.value += 'Error: '+error+ '\n';        
+                        textArea.value += 'Error: '+error+ '\n';
                     }
-                );// Connect to brickd
-
+                ); // Connect to brickd
                 // Don't use device before ipcon is connected
+
                 ipcon.on(Tinkerforge.IPConnection.CALLBACK_CONNECTED,
                     function(connectReason) {
                         // Get threshold callbacks with a debounce time of 10 seconds (10000ms)
@@ -45,9 +46,9 @@
                         // Configure threshold for "smaller than 200"
                         dist.setDistanceCallbackThreshold('<', 200, 0);
                         // Set Period for distance callback to 0.2s (200ms)
-                        // Note: The callback is only called every 200ms if the 
+                        // Note: The callback is only called every 200ms if the
                         // distance has changed since the last call!
-                        dist.setDistanceCallbackPeriod(200);       
+                        dist.setDistanceCallbackPeriod(200);
                     }
                 );
                 // Register threshold reached callback
@@ -55,12 +56,11 @@
                     // Callback for distance value smaller than 200
                     function(distance) {
                         textArea.value += 'Distance value is smaller than 200: '+distance;
-						textArea.value += '\n';
-						textArea.scrollTop = textArea.scrollHeight;
+                        textArea.value += '\n';
+                        textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
-			}
-		</script>
-	</body>
+            }
+        </script>
+    </body>
 </html>
-
