javascript: Clean up output creation

--- a/software/examples/javascript/ExampleCallback.html
+++ b/software/examples/javascript/ExampleCallback.html
@@ -51,8 +51,7 @@
                 dist.on(Tinkerforge.BrickletDistanceUS.CALLBACK_DISTANCE,
                     // Callback function for distance value
                     function(distance) {
-                        textArea.value += 'Distance: '+distance;
-                        textArea.value += '\n';
+                        textArea.value += 'Distance: '+distance+'\n';
                         textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
