--- a/software/examples/javascript/ExampleThreshold.html
+++ b/software/examples/javascript/ExampleThreshold.html
@@ -31,31 +31,29 @@
                     ipcon.disconnect();
                 }
                 ipcon = new Tinkerforge.IPConnection(); // Create IP connection
-                var dist = new Tinkerforge.BrickletDistanceUS(UID, ipcon); // Create device object
+                var dus = new Tinkerforge.BrickletDistanceUS(UID, ipcon); // Create device object
                 ipcon.connect(HOST, PORT,
                     function(error) {
-                        textArea.value += 'Error: '+error+ '\n';
+                        textArea.value += 'Error: ' + error + '\n';
                     }
                 ); // Connect to brickd
                 // Don't use device before ipcon is connected
 
                 ipcon.on(Tinkerforge.IPConnection.CALLBACK_CONNECTED,
-                    function(connectReason) {
+                    function (connectReason) {
                         // Get threshold callbacks with a debounce time of 10 seconds (10000ms)
-                        dist.setDebouncePeriod(10000);
-                        // Configure threshold for "smaller than 200"
-                        dist.setDistanceCallbackThreshold('<', 200, 0);
-                        // Set Period for distance callback to 0.2s (200ms)
-                        // Note: The callback is only called every 200ms if the
-                        // distance has changed since the last call!
-                        dist.setDistanceCallbackPeriod(200);
+                        dus.setDebouncePeriod(10000);
+
+                        // Configure threshold for distance value "smaller than 200"
+                        dus.setDistanceCallbackThreshold('<', 200, 0);
                     }
                 );
-                // Register threshold reached callback
-                dist.on(Tinkerforge.BrickletDistanceUS.CALLBACK_DISTANCE_REACHED,
-                    // Callback for distance value smaller than 200
-                    function(distance) {
-                        textArea.value += 'Distance value is smaller than 200: '+distance+'\n';
+
+                // Register distance value reached callback
+                dus.on(Tinkerforge.BrickletDistanceUS.CALLBACK_DISTANCE_REACHED,
+                    // Callback function for distance value reached callback
+                    function (distance) {
+                        textArea.value += 'Distance Value: ' + distance + '\n';
                         textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
