--- a/software/examples/javascript/ExampleCallback.html
+++ b/software/examples/javascript/ExampleCallback.html
@@ -31,27 +31,28 @@
                     ipcon.disconnect();
                 }
                 ipcon = new Tinkerforge.IPConnection(); // Create IP connection
-                var dist = new Tinkerforge.BrickletDistanceUS(UID, ipcon); // Create device object
+                var dus = new Tinkerforge.BrickletDistanceUS(UID, ipcon); // Create device object
                 ipcon.connect(HOST, PORT,
                     function(error) {
-                        textArea.value += 'Error: '+error+ '\n';
+                        textArea.value += 'Error: ' + error + '\n';
                     }
                 ); // Connect to brickd
                 // Don't use device before ipcon is connected
 
                 ipcon.on(Tinkerforge.IPConnection.CALLBACK_CONNECTED,
-                    function(connectReason) {
-                        // Set Period for distance callback to 0.2s (200ms)
-                        // Note: The callback is only called every 200ms if the
-                        // distance has changed since the last call!
-                        dist.setDistanceCallbackPeriod(200);
+                    function (connectReason) {
+                        // Set period for distance value callback to 0.2s (200ms)
+                        // Note: The distance value callback is only called every 0.2 seconds
+                        //       if the distance value has changed since the last call!
+                        dus.setDistanceCallbackPeriod(200);
                     }
                 );
-                // Register distance callback
-                dist.on(Tinkerforge.BrickletDistanceUS.CALLBACK_DISTANCE,
-                    // Callback function for distance value
-                    function(distance) {
-                        textArea.value += 'Distance: '+distance+'\n';
+
+                // Register distance value callback
+                dus.on(Tinkerforge.BrickletDistanceUS.CALLBACK_DISTANCE,
+                    // Callback function for distance value callback
+                    function (distance) {
+                        textArea.value += 'Distance Value: ' + distance + '\n';
                         textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
